# EdinetAnalyzer

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini  test_agent_manual.py  test_financial_data.csv
docs/: implementation.md  plan.md  spec.md
outputs/test_results/: test_results_20250713_160656.json  test_results_20250713_161040.json
src/edinet_analyzer/: __init__.py  agent.py  app.py  edges.py  nodes.py  state.py
src/structure/: financial_mappings.json  taxonomy_analysis_S100VVBR_xbrl.json
temp_taxonomy_analysis/XBRL_TO_CSV/: jpaud-aar-cn-001_G11665-001_2025-04-16_01_2025-07-11.csv  jpaud-aar-cn-001_G11665-002_2025-04-16_01_2025-07-11.csv  jpaud-aar-cn-001_G11665-003_2025-04-16_01_2025-07-11.csv  jpsps070000-asr-001_G11665-000_2025-04-16_01_2025-07-11.csv  jpsps070000-asr-001_G11665-001_2025-04-16_01_2025-07-11.csv
temp_test_extract/XBRL_TO_CSV/: jpsps070000-asr-001_G11665-002_2025-04-16_01_2025-07-11.csv  jpsps070000-asr-001_G11665-004_2025-04-16_01_2025-07-11.csv
temp_xbrl_extracted/XBRL_TO_CSV/: jpaud-aai-cc-001_E03621-000_2025-03-31_01_2025-06-23.csv  jpaud-aar-cn-001_E03621-000_2025-03-31_01_2025-06-23.csv  jpaud-aar-cn-001_E12460-000_2025-04-16_01_2025-07-11.csv  large_test.csv  (+3 more)
tests/: __init__.py  comprehensive_test.py  conftest.py  interactive_test.py  run_test_with_real_keys.py  simple_test.py  test_agent.py  test_agent_basic.py  test_agent_integration.py  test_agent_state.py  test_edinet_api.py  test_integration.py  test_langchain_tools.py  test_results_analysis.md  test_utils.py  test_xbrl_analysis.py
(+11 files in other folders)
